adding upload button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
  <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
 <body style="margin: 0px">
+ <input type="file" id="pdf-upload" value="Upload">
  <div id="adobe-dc-view"></div>
  <script src=https://documentcloud.adobe.com/view-sdk/main.js"></script>
  <script type="text/javascript">
