--- a/index.html
+++ b/index.html
@@ -12,16 +12,24 @@
  <div id="adobe-dc-view"></div>
  <script src=https://documentcloud.adobe.com/view-sdk/main.js"></script>
  <script type="text/javascript">
-    document.addEventListener("adobe_dc_view_sdk.ready", function()
+    document.querySelector("#pdf-upload").addEventListener("change", function(e){
+     var canvasElement = document.querySelector("canvas")
+     var file = e.target.files[0]
+     if(file.type != "application/pdf"){
+      console.error(file.name, "is not a pdf file.")
+      return
+     }
+     document.addEventListener("adobe_dc_view_sdk.ready", function()
     {
         <!-- Not ideal.. I mean never do this; but for testing purposes im going to put this here -->
         var adobeDCView = new AdobeDC.View({clientId: "83dad356665b4ef493f2ba8cc93bae88", divId: "adobe-dc-view"});
         adobeDCView.previewFile(
        {
-          content:   {location: {url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf"}},
-          metaData: {fileName: "Bodea Brochure.pdf"}
+          content:   {location: {file: file}}
        });
-    });
+    });                                              
+     fileReader.readAsArrayBuffer(file);
+    })
  </script>
 </body>
 </html>
