--- a/index.html
+++ b/index.html
@@ -20,15 +20,11 @@
       return
      }
      document.addEventListener("adobe_dc_view_sdk.ready", function()
-    {
-        <!-- Not ideal.. I mean never do this; but for testing purposes im going to put this here -->
-        var adobeDCView = new AdobeDC.View({clientId: "83dad356665b4ef493f2ba8cc93bae88", divId: "adobe-dc-view"});
-        adobeDCView.previewFile(
-       {
-          content:   {location: {file: file}}
-       });
-    });                                              
-     fileReader.readAsArrayBuffer(file);
+     {
+         <!-- Not ideal.. I mean never do this; but for testing purposes im going to put this here -->
+         var adobeDCView = new AdobeDC.View({clientId: "83dad356665b4ef493f2ba8cc93bae88", divId: "adobe-dc-view"});
+         adobeDCView.previewFile(file);
+     });                                 
     })
  </script>
 </body>
