--- a/index.html
+++ b/index.html
@@ -1,37 +1,37 @@
-<!--Get the samples from https://www.adobe.com/go/dcviewsdk_samples-->
-<!DOCTYPE html>
 <html>
 <head>
- <title>Adobe Document Cloud View SDK Sample</title>
- <meta charset="utf-8"/>
- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
- <meta id="viewport" name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Your title</title>
+  <meta charset="utf-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+  <script src=https://documentcloud.adobe.com/view-sdk/main.js"></script>
 </head>
-<body style="margin: 0px">
- <label for="file-picker"> Choose a PDF file:</label>
- <input type="file" id="file-picker" accept="application/pdf">
- <div id="adobe-dc-view"></div>
- <script src=https://documentcloud.adobe.com/view-sdk/main.js"></script>
- <script type="text/javascript">
-    function listenForFileUpload() {
-      var fileToRead = document.getElementById("file-picker");
-      fileToRead.addEventListener("change", function(event) {
-         var files = fileToRead.files;
-         if (files.length > 0) {
-            var reader = new FileReader();
-            reader.onloadend = function(e) {
-                var filePromise = Promise.resolve(e.target.result);
-                // Pass the filePromise and name of the file to the previewFile API
-                // adobeDCView.previewFile({
-                //      content: {promise: filePromise}
-                //      metaData: { fileName: files[0].name }
-                // })
-            };
-            reader.readAsArrayBuffer(files[0]);
-          }
-        }, false);
-    }             
-    listenForFileUpload()
- </script>
+<body>
+                                                               <label for="file-picker"> Choose a PDF file:</label>
+<input type="file" id="file-picker" accept="application/pdf">
+  <div id="adobe-dc-view"></div>
+                         
+  <script type="text/javascript">
+   
+  function listenForFileUpload() {
+  var fileToRead = document.getElementById("file-picker");
+  fileToRead.addEventListener("change", function(event) {
+     var files = fileToRead.files;
+     if (files.length > 0) {
+        var reader = new FileReader();
+        reader.onloadend = function(e) {
+            var filePromise = Promise.resolve(e.target.result);
+            // Pass the filePromise and name of the file to the previewFile API
+            adobeDCView.previewFile({
+                 content: {promise: filePromise}
+                  metaData: { fileName: files[0].name }
+            })
+        };
+        reader.readAsArrayBuffer(files[0]);
+      }
+    }, false);
+}
+                                      listenForFileUpload()
+  </script>
 </body>
 </html>
+<!--Get the samples from ://www.adobe.com/go/dcviewsdk_samples-->
