--- a/index.html
+++ b/index.html
@@ -11,26 +11,29 @@
   <div id="adobe-dc-view"></div>
                          
   <script type="text/javascript">
-   
-  function listenForFileUpload() {
-  var fileToRead = document.getElementById("file-picker");
-  fileToRead.addEventListener("change", function(event) {
-     var files = fileToRead.files;
-     if (files.length > 0) {
-        var reader = new FileReader();
-        reader.onloadend = function(e) {
-            var filePromise = Promise.resolve(e.target.result);
-            // Pass the filePromise and name of the file to the previewFile API
-            adobeDCView.previewFile({
-                 content: {promise: filePromise}
-                  metaData: { fileName: files[0].name }
-            })
-        };
-        reader.readAsArrayBuffer(files[0]);
-      }
-    }, false);
-}
-                                      listenForFileUpload()
+   document.addEventListener("adobe_dc_view_sdk.ready", function()
+   {
+      var adobeDCView = new AdobeDC.View({clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view"});
+      listenForFileUpload(adobeDCView)
+   });
+      function listenForFileUpload(adobeDCView) {
+        var fileToRead = document.getElementById("file-picker");
+        fileToRead.addEventListener("change", function(event) {
+           var files = fileToRead.files;
+           if (files.length > 0) {
+              var reader = new FileReader();
+              reader.onloadend = function(e) {
+                  var filePromise = Promise.resolve(e.target.result);
+                  // Pass the filePromise and name of the file to the previewFile API
+                  adobeDCView.previewFile({
+                       content: {promise: filePromise}
+                        metaData: { fileName: files[0].name }
+                  })
+              };
+              reader.readAsArrayBuffer(files[0]);
+            }
+          }, false);
+    }
   </script>
 </body>
 </html>
