--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script type="text/javascript">
    document.addEventListener("adobe_dc_view_sdk.ready", function()
    {
-      var adobeDCView = new AdobeDC.View({clientId: "<YOUR_CLIENT_ID>", divId: "adobe-dc-view"});
+      var adobeDCView = new AdobeDC.View({clientId: "83dad356665b4ef493f2ba8cc93bae88", divId: "adobe-dc-view"});
       listenForFileUpload(adobeDCView)
    });
       function listenForFileUpload(adobeDCView) {
