--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   var filePromise = Promise.resolve(e.target.result);
                   // Pass the filePromise and name of the file to the previewFile API
                   adobeDCView.previewFile({
-                       content: {promise: filePromise}
+                       content: {promise: filePromise},
                         metaData: { fileName: files[0].name }
                   })
               };
