--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         
         var adobeDCView = new AdobeDC.View({clientId: "83dad356665b4ef493f2ba8cc93bae88", divId: "adobe-dc-view"});                                                             
         var fileToRead = document.getElementById("file-picker");
-        fileToRead.addEventListener("change", function(event) {
+        fileToRead.addEventListener("change", async function(event) => {
            var files = fileToRead.files;
            if (files.length > 0) {
               var reader = new FileReader();
